refactoring tests 3